Add header boilerplate to index.html

--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
   </head>
 
   <body>
-    <div id="header">
-      <div id="logo-links">
-        <div id="header-logo"></div>
-        <div id="header-links"></div>
+    <header>
+      <div id="logo-and-links">
+        <div id="logo"></div>
+        <ul id="links">
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
-    </div>
-    <div id="random-info"></div>
-    <div id="content"></div>
-    <div id="sign-up"></div>
+
+      <div id="description-and-image">
+        <div id="description">
+          <h1></h1>
+          <p></p>
+          <button></button>
+        </div>
+        <img>
+      </div>
+    </header>
+
+
+
+
+
   </body>
 </html>
