--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900'> 
   </head>
 
   <body>
     <header>
       <div id="logo-and-links">
-        <div id="logo"></div>
+        <div id="logo">Header Logo</div>
         <ul id="links">
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
         </ul>
       </div>
 
