--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 
       <div id="description-and-image">
         <div id="description">
-          <h1></h1>
-          <p></p>
-          <button></button>
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+          <button>Sign up</button>
         </div>
-        <img>
+        <img src="./images/penguin.jpg" alt="penguin">
       </div>
     </header>
 
