Add a section boilerplate to index.html

--- a/index.html
+++ b/index.html
@@ -30,13 +30,31 @@
           </p>
           <button>Sign up</button>
         </div>
-        <img src="./images/penguin.jpg" alt="penguin">
+        <img id="penguin" src="./images/penguin.jpg" alt="penguin">
       </div>
     </header>
-
-
-
-
+    
+    <section id="content">
+      <h2></h2>
+      <div id="items">
+        <div id="item-one">
+          <img class="image-list">
+          <p></p>
+        </div>
+        <div id="item-two"><img class="image-list">
+          <img class="image-list">
+          <p></p>
+        </div>
+        <div id="item-three"><img class="image-list">
+          <img class="image-list">
+          <p></p>
+        </div>
+        <div id="item-four"><img class="image-list">
+          <img class="image-list">
+          <p></p>
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
