--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
         <img id="penguin" src="./images/penguin.jpg" alt="penguin">
       </div>
     </header>
-    
+
     <section id="content">
-      <h2></h2>
+      <h2 id="content-header">Some random information.</h2>
       <div id="items">
-        <div id="item-one">
-          <img class="image-list">
-          <p></p>
+        <div class="item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
         </div>
-        <div id="item-two"><img class="image-list">
-          <img class="image-list">
-          <p></p>
+        <div class="item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
         </div>
-        <div id="item-three"><img class="image-list">
-          <img class="image-list">
-          <p></p>
+        <div class="item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
         </div>
-        <div id="item-four"><img class="image-list">
-          <img class="image-list">
-          <p></p>
+        <div class="item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
         </div>
       </div>
     </section>
