Add quote section to index.html

--- a/index.html
+++ b/index.html
@@ -56,5 +56,16 @@
       </div>
     </section>
 
+    <section id="quote">
+      <div>
+        <p>
+          This is an inspiring quote, or testimonial from a costumer.
+          Maybe it's just filling up space, or may people will actually read it.
+          Who knows? All i know is that it looks nice.
+        </p>
+        <div id="author">-Thor, God of Thunder</div>
+      </div>
+    </section>
+
   </body>
 </html>
