--- a/index.html
+++ b/index.html
@@ -67,5 +67,14 @@
       </div>
     </section>
 
+    <section id="sign-up">
+      <div id="card">
+        <div id="card-msg">
+          <h3>Call to action! It's time!</h3>
+          <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button>Sign up</button>
+      </div>
+    </section>
   </body>
 </html>
